# aviateur

./: .gitmodules  CMakeLists.txt  README.md  aviateur.desktop  build-appimage.sh  gstreamer_script.md  linuxdeploy-plugin-gstreamer.sh  set_windows_icon.ps1  test_localhost.bash  test_multicast.bash  test_multicast.ps1  wsl-map-usb.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
assets/: COPYRIGHT.md  translations.csv
src/: QmlNativeAPI.h  gui_interface.h  main.cpp  sdp_handler.h
src/feature/: CMakeLists.txt  low_light_enhancer.cpp  low_light_enhancer.h  night_image_enhancement.cpp  night_image_enhancement.h  video_stabilizer.cpp  video_stabilizer.h
src/gui/: CMakeLists.txt  control_panel.cpp  control_panel.h  player_rect.cpp  player_rect.h  settings_tab.cpp  settings_tab.h  tip_label.cpp  tip_label.h
src/player/: CMakeLists.txt  GifEncoder.cpp  GifEncoder.h  JpegEncoder.cpp  JpegEncoder.h  Mp4Encoder.cpp  Mp4Encoder.h  RealTimePlayer.cpp  RealTimePlayer.h  RealTimeRenderer.cpp  RealTimeRenderer.h  YuvRenderer.cpp  YuvRenderer.h  ffmpegDecode.cpp  ffmpegDecode.h  ffmpeg_decoder.cpp  ffmpeg_decoder.h  gif_encoder.cpp  gif_encoder.h  gst_decoder.cpp  gst_decoder.h  jpeg_encoder.cpp  jpeg_encoder.h  mp4_encoder.cpp  mp4_encoder.h  real_time_player.cpp  real_time_player.h  yuv_renderer.cpp  yuv_renderer.h
src/shaders/: compile_and_convert.ps1  convert_files_to_header.py  yuv.frag  yuv.vert
src/stabilization/: video_stab.cpp  video_stab.h
src/util/: base64.cpp  base64.h  mini.cpp  util.cpp  util.h
src/wifi/: CMakeLists.txt  FecChangeController.h  Rtp.h  RxFrame.h  SignalQualityCalculator.cpp  SignalQualityCalculator.h  TxFrame.cpp  TxFrame.h  WFBDefine.h  WFBProcessor.cpp  WFBProcessor.h  WFBReceiver.cpp  WFBReceiver.h  WfbProcessor.cpp  WfbProcessor.h  WfbReceiver.cpp  WfbReceiver.h  WfbngDefine.h  WfbngLink.cpp  WfbngLink.h  WfbngLink.hpp  WfbngProcessor.cpp  WfbngProcessor.h  fec.h  fec_controller.h  rx_frame.h  signal_quality.cpp  signal_quality.h  transmitter.cpp  transmitter.h  tun.cpp  tun.h  tun_tap.cpp  tun_tap.h  tx_frame.cpp  tx_frame.h  wfbng_define.h  wfbng_link.cpp  wfbng_link.h  wfbng_processor.cpp  (+1 more)
src/wifi/linux/: transmitter.cpp  transmitter.h  tun.cpp  tun.h  tx_frame.cpp  tx_frame.h
src/wifi/wfb-ng/: rx.cpp  rx.hpp  wifibroadcast.cpp  wifibroadcast.hpp
src/wifi/wfb-ng/include/pcap/: bpf.h
src/wifi/windows/: wfbng_define.h  wfbng_processor.cpp  wfbng_processor.h
